//Use proto3 syntax
syntax = "proto3";
import "google/protobuf/wrappers.proto";

//import "google/protobuf/empty.proto";
package asr_service;

//Define the service
service asr_service {
    rpc transcribe_blob(speak) returns (transcription_blob);
    rpc transcribe_stream(stream speak) returns (stream transcription_stream);

   // rpc get_sid(google.protobuf.Empty) returns (session_id);
}

// Message Request (Both stream and Blob)
message speak{
    google.protobuf.BytesValue audioBytes = 1;
    google.protobuf.Int32Value sampleRate = 2;
    google.protobuf.StringValue id = 3;
    google.protobuf.BoolValue first = 4;

}

// Message Reply (Audio STREAM)
message transcription_stream{

    google.protobuf.StringValue text = 1;
    google.protobuf.StringValue id = 2;
    google.protobuf.BoolValue final = 3;
}

// Message Reply (Audio BLOB)
message transcription_blob{
    google.protobuf.StringValue transcription = 1;
    google.protobuf.Int32Value sampleRate = 2;
}
